--- a/views/novoproduto.ejs
+++ b/views/novoproduto.ejs
@@ -1,144 +1,124 @@
 ﻿<!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Novo Produto</title>
-
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-<script src="/javascripts/jquery.maskMoney.min.js" type="text/javascript"></script>
-<link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
-<link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
-<link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
-
-</head>
-
-<body>
-<header>
-<div id="logo" class="espacamento"></div>
-
-
-<nav class="menu_principal">
-
-<ul>
-
-<li> <a href="#">Início</a></li>
-<li> <a href="">Produtos</a>
-    <ul>
-       <li><a> Novo Produto </a> </li>
-       <li><a> Entrada e Saída de Produto </a></li>
-       <li><a > Editar Produto</a> </li>
-        <li><a> Editar Produto </a></li>
-
-    </ul>
-</li>
-
-<li> <a href="#">Estoque </a></li>
-<li> <a href="#">Fornecedores </a>
-     <ul>
-       <li><a href="#"> Novo Fornecedor</a> </li>
-       <li><a href="#"> Lista de Fornecedores</a> </li>
-       <li><a href="#"> Pesquisar Fornecedor</a> </li>
-       <li><a href="editarfornecedor.html"> Editar Fornecedor</li>
-
-    </ul>
-</li>
-<li> <a href="#">Relatórios </a></li>
- <li> <a href="#">Lucro </a></li>
-<li> <a href="#">Sair </a></li>
-
-
-</ul>
-
-</nav>
-
-<div class="clear"></div>
-</header>
-<article>
-
-<h1>Novo Produto</h1>
-
-
-
-<article>
-<form  action="" method="post">
-<div class="form-row">
-   <div class="form-group  md-col-2" >
-      <label for="cd_produto">Código</label>
-      <input id="cd_produto" name="cd_produto" class="form-control" type="text"   />
-   </div>
-
-   <div class="form-group  md-col-2" >
-    <label for="cd_ncm">NCM</label>
-    <input id="cd_ncm" name="cd_ncm" class="form-control" type="text"   />
- </div>
-
-   <div class="form-group  md-col-6">
-      <label for="ds_produto">Nome Produto</label>
-      <input id="ds_produto" class="form-control" name="ds_produto" />
-    </div>
+   <head>
+      <meta charset="utf-8">
+      <title>Novo Produto</title>
+      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+      <script src="/javascripts/jquery.maskMoney.min.js" type="text/javascript"></script>
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+      <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
+      <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
+      <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
+   </head>
+   <body>
+      <header>
+         <div id="logo" class="espacamento"></div>
+         <nav class="menu_principal">
+            <ul>
+               <li> <a href="#">Início</a></li>
+               <li>
+                  <a href="">Produtos</a>
+                  <ul>
+                     <li><a> Novo Produto </a> </li>
+                     <li><a> Entrada e Saída de Produto </a></li>
+                     <li><a > Editar Produto</a> </li>
+                     <li><a> Editar Produto </a></li>
+                  </ul>
+               </li>
+               <li> <a href="#">Estoque </a></li>
+               <li>
+                  <a href="#">Fornecedores </a>
+                  <ul>
+                     <li><a href="#"> Novo Fornecedor</a> </li>
+                     <li><a href="#"> Lista de Fornecedores</a> </li>
+                     <li><a href="#"> Pesquisar Fornecedor</a> </li>
+                     <li>
+                        <a href="editarfornecedor.html">
+                           Editar Fornecedor
+                     </li>
+                  </ul>
+               </li>
+               <li> <a href="#">Relatórios </a></li>
+               <li> <a href="#">Lucro </a></li>
+               <li> <a href="#">Sair </a></li>
+            </ul>
+         </nav>
+         <div class="clear"></div>
+      </header>
+      <article>
+      <h1>Novo Produto</h1>
+      <article>
+         <form id="form"  action="" method="post">
+            <div class="form-row">
+               <div class="form-group  md-col-2" >
+                  <label for="cd_produto">Código</label>
+                  <input id="cd_produto" name="cd_produto" class="form-control" type="text"   />
+               </div>
+               <div class="form-group  md-col-2" >
+                  <label for="cd_ncm">NCM</label>
+                  <input id="cd_ncm" name="cd_ncm" class="form-control" type="text"   />
+               </div>
+               <div class="form-group  md-col-6">
+                  <label for="ds_produto">Nome Produto</label>
+                  <input id="ds_produto" class="form-control" name="ds_produto" />
+               </div>
+            </div>
+            <div class="form-row">
+               <div class="form-group md-col-2">
+                  <label for="Tipo_Embalagem_nm_tipo_embalagem">Embalagem</label>
+                  <select id="Tipo_Embalagem_nm_tipo_embalagem" name="Tipo_Embalagem_nm_tipo_embalagem" class="form-control">
+                     <%  for (var i=0; i< tipo_embalagem.length; i++){ %>
+                     <option> <%= tipo_embalagem[i].nm_tipo_embalagem %></option>
+                     <% } %>
+                  </select>
+               </div>
+               <div class="form-group md-col-2">
+                  <label for="qt_produto">Quantidade</label>
+                  <input id="qt_produto" name="qt_produto" type="number" class="form-control" style="width:100%"/> 
+               </div>
+               <div class="form-group md-col-2">
+                  <label for="vl_unitario">Valor Unitário</label>
+                  <input id="vl_unitario"  name="vl_unitario" type="" class="form-control mask" placeholder="R$" />
+               </div>
+               <div class="form-group md-col-2">
+                  <label for="vl_total">Valor Total</label>
+                  <input id="vl_total"  name="vl_total" class="form-control mask" placeholder="R$" type="" />
+               </div>
+            </div>
+            <button type="button" id="btnGravar" data-toggle="modal" data-target="#mymodal"> Inserir</button>
+            <input id="btnCancelar" type="reset"/>
+            <div id="mymodal" class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                  Deseja salvar os dados?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn btn-primary" onclick="document.querySelector('#form').submit()">Salvar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+         </form>
+      </article>
+   </body>
+   <script>
+      $(function() {
+        $('.mask').maskMoney({
+             decimal: ".",
+             thousands: "."
+        }
+        );
+      });
       
-
-    </div>
-
-<div class="form-row">
-
-    <div class="form-group md-col-2">
-        <label for="Tipo_Embalagem_nm_tipo_embalagem">Embalagem</label>
-        <select id="Tipo_Embalagem_nm_tipo_embalagem" name="Tipo_Embalagem_nm_tipo_embalagem" class="form-control">
-          <%  for (var i=0; i< tipo_embalagem.length; i++){ %>
-              <option> <%= tipo_embalagem[i].nm_tipo_embalagem %></option>
-              <% } %>
-          </select>
-      </div>
-      
-<div class="form-group md-col-2">
-  <label for="qt_produto">Quantidade</label>
-  <input id="qt_produto" name="qt_produto" type="number" class="form-control" style="width:100%"/> 
-</div>
-
-<div class="form-group md-col-2">
-  <label for="vl_unitario">Valor Unitário</label>
-
-  <input id="vl_unitario"  name="vl_unitario" type="" class="form-control mask" placeholder="R$" />
-</div>
-
-<div class="form-group md-col-2">
-  <label for="vl_total">Valor Total</label>
-
-  <input id="vl_total"  name="vl_total" class="form-control mask" placeholder="R$" type="" />
-</div>
-      </div>
-
-
-
-</form>
-<button id="btnGravar" data-toggle="modal" data-target="#mymodal"> Inserir</button>
-<input id="btnCancelar" type="reset"/>
-
-</article>
-
-<div id="mymodal" class="modal fade">
-    <div class="modal-content">
-    
-      Deseja salvar os dados?
-      <button class="btnSalvar">Salvar</button>
-      <button class ="btnFechar">Fechar</button>
-    
-    
-    </div>
- </div>
-
-</body>
-
-<script>
-  $(function() {
-    $('.mask').maskMoney({
-         decimal: ".",
-         thousands: "."
-    }
-    );
-  });
-
-</script>
+   </script>
 </html>
