--- a/views/produtoxml.ejs
+++ b/views/produtoxml.ejs
@@ -77,12 +77,12 @@
 
             <tr>
               <td scope="row">1</td>
-              <td> <%= prod[i].cProd %> </td>
-              <td> <%= prod[i].xProd %> </td>
-              <td> <%= prod[i].uCom %> </td>
-              <td> <%= prod[i].qCom %> </td>
-              <td> <%= prod[i].vUnCom %> </td>
-              <td> <%= prod[i].vProd %> </td>
+              <td> <%= produtos[i].cProd %> </td>
+              <td> <%= produtos[i].xProd %> </td>
+              <td> <%= produtos[i].uCom %> </td>
+              <td> <%= produtos[i].qCom %> </td>
+              <td> <%= produtos[i].vUnCom %> </td>
+              <td> <%= produtos[i].vProd %> </td>
               <td><img src="" alt="editar"></td>
               <td><img src="" alt="excluir"></td>
               <%  } %>
@@ -92,9 +92,9 @@
                
         </tbody>
       </table>
-      
+      <button type="submit" formaction="/produtoxml">Cancelar</button>
 
-        
+         
 
 
 </article>
