Implementaçao botao salvar

--- a/views/produtoxml.ejs
+++ b/views/produtoxml.ejs
@@ -15,7 +15,7 @@
    </head>
    <body>
       <header>
-         <div id="logo" class="espacamento"></div>
+         <div namelogo" class="espacamento"></div>
          <nav class="menu_principal">
             <ul>
                <li> <a href="#">Início</a></li>
@@ -50,7 +50,7 @@
       </header>
       <article>
           <h2> Ler Nota XMl</h2>
- <form id="form" action="" method="POST" enctype="multipart/form-data">        
+ <form nameform" action="" method="POST" enctype="multipart/form-data">        
 <input type="File" name="upXml" />
 <button type="submit">Ler</button>
 </form> 
@@ -61,8 +61,10 @@
             
             <th scope="col">Cód.Produto</th>
             <th scope="col">Descrição</th>
+            <th scope="col">NCM</th>
+
             <th scope="col">Embalagem</th>
-            <th scope="col">Quantidade</th>
+            <th scope="col">Quantnamee</th>
             <th scope="col">Valor Unitário</th>
             <th scope="col">Valor Total</th>
             <th scope="col">Editar</th>
@@ -79,29 +81,65 @@
               <td scope="row">1</td>
               <td> <%= produtos[i].cProd %> </td>
               <td> <%= produtos[i].xProd %> </td>
+              <td> <%= produtos[i].NCM %> </td>
               <td> <%= produtos[i].uCom %> </td>
               <td> <%= produtos[i].qCom %> </td>
               <td> <%= produtos[i].vUnCom %> </td>
               <td> <%= produtos[i].vProd %> </td>
               <td><img src="" alt="editar"></td>
               <td><img src="" alt="excluir"></td>
-              <%  } %>
-                    
-                  
                 </tr>
-               
+                <% } %>
         </tbody>
       </table>
-      <button type="submit" formaction="/produtoxml">Cancelar</button>
+     
 
-         
-
+      <form id="form" method="POST" action="" >
+          <% for (var i =0; i< produtos.length; i++){ %>
+        <input name="cd_produto" type="hidden" value =" <%= produtos[i].cProd %> "   />
+        <input name="ds_produto"  type="hidden" value= " <%= produtos[i].xProd %>" />
+        <input name="cd_ncm"  type="hidden" value = " <%= produtos[i].NCM %> "/>
+        <input name="Tipo_Embalagem_nm_tipo_embalagem"   type="hidden" value = " <%= produtos[i].uCom %> " />
+        <input name="qt_produto"  type="hidden"  value = " <%= produtos[i].qCom %> "/>
+        <input name="vl_unitario"  type="hidden" value = " <%= produtos[i].vUnCom %> " />
+        <input name="vl_total"  type="hidden" value = " <%= produtos[i].vProd %> " />
+        <%  } %>
+        <button type="button" id="btnok" formaction="/produtoxml"  >Salvar</button>
+      </form>
+      <br>
 
 </article>
 
 
 </body>
+<script>
+  document.querySelector('#btnok').addEventListener('click', function(){
+   var fieldform = document.querySelectorAll('input').values;
+   
+
+for(var i=0; i<= fieldform.length; i++) {
+console.log(fieldform[i])
+
+}
+  /* 
+  var jsonProdutos = {cd_produto:"", ds_produto:"", cd_ncm:"", Tipo_Embalagem_nm_tipo_embalagem:"",
+qt_produto:"", vl_unitario:"", vl_total:"" };
+
+jsonProdutos.cd_produto= fieldform[0];
+jsonProdutos.ds_produto= fieldform[1];
+jsonProdutos.cd_ncm= fieldform[2];
+jsonProdutos.Tipo_Embalagem_nm_tipo_embalagem= fieldform[3];
+jsonProdutos.vl_unitario= fieldform[4];
+jsonProdutos.vl_total=fieldform[5];
+
+  
+  };*/
+//var nota=JSON.stringify(jsonProdutos);
+//console.log(nota);
+
+});
 
 
+</script>
 
-
+</html>
