--- a/views/produtoxml.ejs
+++ b/views/produtoxml.ejs
@@ -9,7 +9,6 @@
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
-      <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/tabela.css" rel="stylesheet" type="text/css">
    </head>
@@ -53,7 +52,12 @@
  <form id="form" action="" method="POST" enctype="multipart/form-data">        
 <input type="File" name="upXml" />
 <button type="submit">Ler</button>
-</form> 
+</form>
+
+<label for="dt_entrada"> da compra:</label>
+ <input id="dt_entrada" type="date"/>
+
+
 <table class="table">
         <thead>
           <tr>
@@ -74,7 +78,6 @@
          
           
           <% for (var i =0; i< produtos.length; i++){ %>
-
             <tr>
               <td scope="row">1</td>
               <td> <%= produtos[i].cProd %> </td>
@@ -93,6 +96,7 @@
         </tbody>
       </table>
       <button type="submit" formaction="/produtoxml">Cancelar</button>
+      <button type="submit" formaction="/produtoxml">Salvar</button>
 
          
 
