--- a/views/produtoxml.ejs
+++ b/views/produtoxml.ejs
@@ -14,7 +14,7 @@
    </head>
    <body>
       <header>
-         <div namelogo" class="espacamento"></div>
+         <div name="logo" class="espacamento"></div>
          <nav class="menu_principal">
             <ul>
                <li> <a href="#">Início</a></li>
@@ -49,7 +49,7 @@
       </header>
       <article>
           <h2> Ler Nota XMl</h2>
- <form nameform" action="" method="POST" enctype="multipart/form-data">        
+ <form id="form" action="" method="POST" enctype="multipart/form-data">        
 <input type="File" name="upXml" />
 <button type="submit">Ler</button>
 </form>
