--- a/views/saidaproduto.ejs
+++ b/views/saidaproduto.ejs
@@ -1,16 +1,14 @@
 <!doctype html>
 <html>
    <head>
+     <html lang="en"></html>
       <meta charset="utf-8">
       <title>Novo Produto</title>
-      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-      <script src="/javascripts/jquery.maskMoney.min.js" type="text/javascript"></script>
-      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
+      <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
-      <link href="/stylesheets/tabela.css" rel="stylesheet" type="text/css">
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script  type="text/javascript" src="/javascripts/typeahead.min.js"></script>
    </head>
    <body>
       <header>
@@ -49,8 +47,34 @@
       </header>
       <article>
           <h2> Saída Produto</h2>
-
+         
+            <input type="text" id="search" name="typeahead" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="Type your Query">
+            <div id="output"></div>
           </article>
-
           </body>
+         
           </html>
+          <script type="text/javascript">
+            $(document).ready(function(){
+                $('input.typeahead').typeahead({
+                    name: 'countries',
+                    remote: 'http://localhost:3000/saidaproduto/search?key=%QUERY',
+                    limit: 10,
+                    itemSelected:function(data,value,text){ 
+                console.log(data) 
+                 alert('value is'+value);
+                 alert('text is'+text); }, //your other stuffs });
+                });
+            });
+    
+           
+            
+
+
+            </script>
+          
+    
+
+
+           
+            
