--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -10,6 +10,7 @@ input{
 input[type=reset]{width:inherit;}
 /* DIV DA LINHA */
 .form-row{
+
 display: flex;
 flex-wrap: wrap;
 text-align:left;
@@ -38,7 +39,7 @@ transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
 
 /* CLASS do input para estilizar */
 .form-control {
-	display:block;
+	  display:block;
     padding: .200rem .50rem;
     font-size: 1rem;
     line-height: 1.5;
@@ -46,7 +47,6 @@ transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
     background-clip: padding-box;
     border: 1px solid #ced4da;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-	
 }
 
 /*MODAL*/
@@ -82,5 +82,53 @@ transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
     transform: translate(0, -25%);
   }
   
-
-
+  .typeahead{ width:inherit; position: inherit; display: inherit; vertical-align: inherit }
+  
+  .twitter-typeahead .tt-query,
+  .twitter-typeahead .tt-hint {
+    margin-bottom: 0;
+  }
+  .tt-hint {
+    display: block;
+    width: 100%;
+    height: 38px;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #999;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  }
+  .tt-dropdown-menu {
+    min-width: 160px;
+    margin-top: 2px;
+    padding: 5px 0;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    background-clip: padding-box;
+  
+  }
+  .tt-suggestion {
+    display: block;
+    padding: 3px 20px;
+  }
+  .tt-suggestion.tt-is-under-cursor {
+    color: #fff;
+    background-color: #428bca;
+  }
+  .tt-suggestion.tt-is-under-cursor a {
+    color: #fff;
+  }
+  .tt-suggestion p {
+    margin: 0;
+  }
