--- a/views/saidaproduto.ejs
+++ b/views/saidaproduto.ejs
@@ -53,43 +53,43 @@
             <input type="text" id="search" name="typeahead" class="typeahead tt-query form-control" autocomplete="off" spellcheck="false" placeholder="Type your Query">
             </div>
         </div>
-            <div id="output"></div>´
-            <div id="output-dados"></div>´
-
-  
+            <div id="output"></div>
+            <div id="output-dados"></div> 
           </article>
           </body>
          
           </html>
           <script type="text/javascript">
-
+            var dados = {};
          
             $(document).ready(function(){
-                $('input.typeahead').typeahead({
-                    name: 'countries',
-                    remote: 'http://localhost:3000/saidaproduto/search?key=%QUERY',
-                    limit: 10
-            }). bind('typeahead:selected', function(obj, datum, name) {
-            var output= document.getElementById('output');
-            output.textContent= JSON.stringify(datum);
-            load_data();
+                var registros = new Bloodhound({
+                  datumTokenizer: function(datum) {
+                    return Bloodhound.tokenizers.whitespace(datum.value);
+                  },
+                  queryTokenizer: Bloodhound.tokenizers.whitespace,
+                  remote: {
+                    wildcard: '%QUERY',
+                    url: '/saidaproduto/search?key=%QUERY'
+                  }
+                });
 
-});           
-function load_data(){
- 
- $.ajax({
-  url: window.location+"/order",
-  method:"GET",
-  success: function(result) {
-       var html;
-       for (var i = 0; i< result.length; i++) {
-           html += '<td>' + result[i] +'</td>';
-       }
-       $('#output-dados').html(html);
-     }  });
-}
+                $('input.typeahead').typeahead(null, {
+                  display: 'ds_produto',
+                  name:'produtos',
+                  identify: function(obj) { return obj.cd_produto; },
+                  templates: {
+                    suggestion: function(data){
+                          return '<p><strong>' + data.cd_produto + '</strong> - ' + data.ds_produto + '</p>';
+                    }
+                  },
+                  source: registros
+                }). bind('typeahead:selected', function(obj, datum, name) {
+                    var output= document.getElementById('output');
+                    output.textContent= JSON.stringify(datum);
+                });   
 
- })
+            })
 
             </script>
           
