--- a/views/saidaproduto.ejs
+++ b/views/saidaproduto.ejs
@@ -7,8 +7,8 @@
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
+      <script  type="text/javascript" src="/javascripts/jquery-3.2.0.min.js"></script>
 
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script  type="text/javascript" src="/javascripts/typeahead.min.js"></script>
    </head>
    <body>
@@ -48,18 +48,45 @@
       </header>
       <article>
           <h2> Saída Produto</h2>
-          <div class="form-row">
-            <div class="form-group md-col-5">
-            <input type="text" id="search" name="typeahead" class="typeahead tt-query form-control" autocomplete="off" spellcheck="false" placeholder="Type your Query">
-            </div>
+
+        <div id="custom-templates">
+            <input type="text" id="search" name="typeahead" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="Entre com o código do produto ou descrição">
         </div>
-            <div id="output"></div>
-            <div id="output-dados"></div> 
+
+        <div id="result">
+            <form id="form" method="post" action="/atualizarEstoque">
+                <div class="form-row">
+                    <div class="form-group  md-col-2" >
+                        <label for="cd_produto">Código</label>
+                        <input id="cd_produto" name="cd_produto" class="form-control" type="text"   />
+                    </div>
+                </div>
+
+                        <div class="form-row">
+                        <div class="form-group  md-col-8">
+                            <label for="ds_produto">Nome Produto</label>
+                            <input id="ds_produto" class="form-control" name="ds_produto" />
+                         </div>
+                         </div>
+                         <div class="form-row">
+                         <div class="form-group md-col-2">
+                            <label for="qt_produto">Quantidade</label>
+                            <input id="qt_produto" name="qt_produto" type="number" class="form-control" style="width:100%"/> 
+                         </div>
+                         </div>
+
+                         <button id="btnAtualizar" type="submit"> Atualizar </button>     
+                        </form>
+
+                        </div>
+          
           </article>
           </body>
          
           </html>
           <script type="text/javascript">
+                //<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
+
             var dados = {};
          
             $(document).ready(function(){
@@ -74,7 +101,7 @@
                   }
                 });
 
-                $('input.typeahead').typeahead(null, {
+                $('#custom-templates .typeahead').typeahead(null, {
                   display: 'ds_produto',
                   name:'produtos',
                   identify: function(obj) { return obj.cd_produto; },
@@ -85,8 +112,13 @@
                   },
                   source: registros
                 }). bind('typeahead:selected', function(obj, datum, name) {
-                    var output= document.getElementById('output');
-                    output.textContent= JSON.stringify(datum);
+                    var codigo = document.getElementById('cd_produto');
+                    var descricao = document.getElementById('ds_produto');
+                    
+                    
+                    codigo.value=datum.cd_produto;
+                    descricao.value=datum.ds_produto;
+
                 });   
 
             })
