Implementação express-session

--- a/views/saidaproduto.ejs
+++ b/views/saidaproduto.ejs
@@ -75,7 +75,7 @@
                             <input id="qt_produto" name="qt_produto" type="number" class="form-control" style="width:100%"/> 
                          </div>
 
-                         <div class="form-group md-col-2">
+                         <div class="form-group md-col-2" style="display:none">
                             <label for="vl_unitario">Valor</label>
                             <input id="vl_unitario" name="vl_unitario" class="form-control" style="width:100%"/> 
                          </div>
@@ -89,6 +89,7 @@
                         <br>
                          <button id="btnAtualizar" type="submit"> Atualizar </button>     
                         </form>
+
 
                         </div>
           
