--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
- <head>
- <title>Cadastro de Clientes</title>
- <link rel="stylesheet" href="/stylesheets/style.css" />
- </head>
- <body>
- <h1>Listagem de Clientes</h1>
- <p>Clientes já cadastrados no sistema.</p>
- <table style="width:50%">
- <thead>
- <tr style="background-color:  #CCC">
- <td style="width:50%">Nome</td>
-<td style="width:15%">Idade</td>
- <td style="width:15%">UF</td>
- <td style="width:20%">Ações</td>
- </tr>
- </thead>
- <tbody>
- <tr>
- <td colspan="4">Nenhum cliente cadastrado.</td>
- </tr>
- </tbody>
- <tfoot>
+<head>
+<meta charset="utf-8">
+<link href="/stylesheets/estilo.css" rel="stylesheet" type="text/css">
+<link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 
-  <%  for (var i=0; i<usuario.length; i++){ %>
-    <tr>
-    <td style='width:50%' ><%= usuario[i].cd_usuario %></td>
-    <td style='width:15%' ><%= usuario[i].nm_usuario %></td>
-    <td style='width:15%' ><%= usuario[i].nm_senha %></td>
+<title>Bazar Olimpio | Login</title>
+</head>
 
-    <td style='width:20%' ><!-- em breve --></td>
+<body>
 
-  </tr>  
-    <% } %>
 
- </tfoot>
- </table>
-<form id="enviaXml" action="file/upload" method="POST" encType="multipart/form-data"> 
- <input type="file"></input> 
-<button id="btnEnviarXml" type="submit"> Enviar </button>
+<div class="content">
+
+
+
+<form id="formulario" method="POST"  action="/autenticar">
+
+<div id="icon-user"></div><input id="txtNome" name="txtNome" class="inputText"  required placeholder="EMAIL"> <div class="clear"></div>
+
+<div id="icon-password"></div><input id="txtSenha" name="txtSenha" class="inputText" type="password" required placeholder="SENHA">
+<div class="clear"></div>
+
+<button id="btnEntrar"name="btnEntrar" type="submit"> LOGIN </button><br>
+
+
+<div class="container-senha">
+
+<div id="esquerda">
+<input id="chkLembrar" name="chkLembrar" value="Sim" type="checkbox" /> 
+</div>
+
+<div id="direita">
+<span > <a  href="#" class="lksenha"> Esqueceu sua senha? </span></a> <br>
+</div>
+
+<div class="clear"> </div>
+
+
+
+</div>
+
+</div>
 </form>
- </body>
+
+
+</body>
 </html>
+
