--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 
 
-<form id="formulario" method="POST"  action="/validarUsuario">
+<form id="formulario" method="POST" >
 
 <div id="icon-user"></div><input id="txtNome" name="txtNome" class="inputText"  required placeholder="EMAIL"> <div class="clear"></div>
 
