--- a/views/novoproduto.ejs
+++ b/views/novoproduto.ejs
@@ -67,8 +67,8 @@
             </div>
             <div class="form-row">
                <div class="form-group md-col-2">
-                  <label for="Tipo_Embalagem_nm_tipo_embalagem">Embalagem</label>
-                  <select id="Tipo_Embalagem_nm_tipo_embalagem" name="Tipo_Embalagem_nm_tipo_embalagem" class="form-control">
+                  <label for="nm_tipo_embalagem">Embalagem</label>
+                  <select id="nm_tipo_embalagem" name="nm_tipo_embalagem" class="form-control">
                      <%  for (var i=0; i< tipo_embalagem.length; i++){ %>
                      <option> <%= tipo_embalagem[i].nm_tipo_embalagem %></option>
                      <% } %>
