criar model para produto

--- a/views/novoproduto.ejs
+++ b/views/novoproduto.ejs
@@ -44,6 +44,7 @@
                <li> <a href="#">Lucro </a></li>
                <li> <a href="#">Sair </a></li>
             </ul>
+            Olá, <p> <%= usuario %></p>
          </nav>
          <div class="clear"></div>
       </header>
