--- a/views/produtoxml.ejs
+++ b/views/produtoxml.ejs
@@ -49,7 +49,7 @@
       </header>
       <article>
           <h2> Ler Nota XMl</h2>
- <form id="form" action="" method="POST" enctype="multipart/form-data">        
+ <form id="form"  method="POST" enctype="multipart/form-data">        
 <input type="file" name="upXml" />
 <button type="submit">Ler</button>
 </form>
