--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,11 +21,11 @@
 <li> <a href="#">Início</a></li>
 <li> <a href="">Produtos</a>
     <ul>
-       <li><a href="novoproduto.html"> Novo Produto </li>
-       <li><a href="entradasaida.html"> Entrada de Produto </li>
-       <li><a href="entradasaida.html"> Saída de Produto </li>
+       <li><a href="novoproduto"> Novo Produto </li>
+       <li><a href="entradasaida"> Entrada de Produto </li>
+       <li><a href="entradasaida"> Saída de Produto </li>
 
-       <li><a href="editarproduto.html"> Editar Produto </li>
+       <li><a href="editarproduto"> Editar Produto </li>
 
     </ul>
 </li>
@@ -56,7 +56,7 @@ Olá, <p> <%= usuario %></p>
 <h1> Menu Rápido </h1>
 
 <div class="img_menu">
-<a href="novoproduto.html"><figure id="item_new" class="item" ></figure></a>
+<a href="novoproduto"><figure id="item_new" class="item" ></figure></a>
 <p class="legenda"><a href="">Novo Produto</a></p>
 </div>
 
