--- a/server/views/novofornecedor.ejs
+++ b/server/views/novofornecedor.ejs
@@ -53,7 +53,7 @@
 <article>
 <h1> Novo Fornecedor</h1>
 
-<form id="form" method="post" action="">
+<form id="form" method="post">
 <div class="form-row">
 
    <div class="form-group  md-col-5">
