--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -18,7 +18,7 @@
 
 <ul>
 
-<li> <a href="#">Início</a></li>
+<li> <a href="home">Início</a></li>
 <li> <a href="">Produtos</a>
     <ul>
        <li><a href="novoproduto"> Novo Produto </li>
@@ -33,10 +33,10 @@
 <li> <a href="#">Estoque </a></li>
 <li> <a href="#">Fornecedores </a>
      <ul>
-       <li><a href="#"> Novo Fornecedor</a> </li>
+       <li><a href="novofornecedor"> Novo Fornecedor</a> </li>
        <li><a href="#"> Lista de Fornecedores</a> </li>
        <li><a href="#"> Pesquisar Fornecedor</a> </li>
-       <li><a href="editarfornecedor.html"> Editar Fornecedor</li>
+       <li><a href="#"> Editar Fornecedor</li>
 
     </ul>
 </li>
@@ -76,7 +76,7 @@ Olá, <p> <%= usuario %></p>
 
 
 <div class="img_menu">
-<a href=""><figure id="item_fornecedor" class="item"></figure></a>
+<a href="novofornecedor"><figure id="item_fornecedor" class="item"></figure></a>
 <p class="legenda"><a href=""> Novo Fornecedor</a></p> 
  </div>
 
