--- a/server/views/novoproduto.ejs
+++ b/server/views/novoproduto.ejs
@@ -68,10 +68,10 @@
             </div>
             <div class="form-row">
                <div class="form-group md-col-2">
-                  <label for="nm_tipo_embalagem">Embalagem</label>
-                  <select id="nm_tipo_embalagem" name="nm_tipo_embalagem" class="form-control">
-                     <%  for (var i=0; i< tipo_embalagem.length; i++){ %>
-                     <option> <%= tipo_embalagem[i].nm_tipo_embalagem %></option>
+                  <label for="tipo_embalagem_nm_tipo_embalagem">Embalagem</label>
+                  <select id="tipo_embalagem_nm_tipo_embalagem" name="tipo_embalagem_nm_tipo_embalagem" class="form-control">
+                     <%  for (var i=0; i< tipo_embalagem_nm_tipo_embalagem.length; i++){ %>
+                     <option> <%= tipo_embalagem_nm_tipo_embalagem[i].nm_tipo_embalagem %></option>
                      <% } %>
                   </select>
                </div>
