--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-body{margin:0; padding:0;  font-family: 'Raleway', sans-serif;}
+*, body{margin:0; padding:0;  font-family: 'Raleway', sans-serif;}
 .clear{clear:both;}
 a{
 	 text-decoration:none; 
