--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -3,50 +3,139 @@
 <head>
 <meta charset="utf-8">
 <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
+<link href="/stylesheets/menu.css" type="text/css" rel="stylesheet">
 <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
-<title>Bazar Olimipio | Home</title>
+
+<title>Bazar Olimpio | Home</title>
 </head>
 
 <body> 
-    <%- include ('menu'); -%>
-<article> 
+    <aside>
+        <nav class="menu_principal">
+          <ul>
+            <li><a href="home"> <i class="fas fa-home"></i> Início</a></li>
+            <li> <a href=""> <i class="fas fa-tag"></i> Produtos</a>
+              <ul>
+                <li><a href="novoproduto"> Novo Produto </li>
+                <li><a href="entradasaida"> Adicionar nota XML </li>
+                <li><a href="entradasaida"> Saída de Produto </li>
+                <li><a href="editarproduto"> Editar Produto </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="fas fa-truck"></i> Fornecedores </a>
+              <ul>
+                <li><a href="novofornecedor"> Novo Fornecedor</a> </li>
+                <li><a href="#"> Editar Fornecedor</a> </li>
+                <li><a href="#"> Pesquisar Fornecedor</a> </li>
+                <li><a href="#"> Lista de Fornecedores </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="far fa-clipboard"></i> Estoque </a>
+              <ul>
+                <li><a href=""> Produtos sem estoque </a> </li>
+                <li><a href="#"> Mais Vendidos </a> </li>
+                <li><a href="#"> Menos Vendidos </a> </li>
+                <li><a href="#"> Produtos Comprados </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="fas fa-dollar-sign"></i>Lucro </a>
+              <ul>
+                <li><a href="#"> Por mês </a> </li>
+                <li><a href="#"> Por Semana </a> </li>
+                <li><a href="#"> Por Ano </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"><i class="fas fa-wallet"></i> Despesas </a>
+              <ul>
+                <li><a href="#"> Loja</a> </li>
+                <li><a href="#"> Pessoais </a> </li>
+              </ul>
+            </li>
+            <li>
+              <button type="button" id="btnSair"> Sair</button>
+              <i class="fas fa-times"></i> </li>
+          </ul>
+        </nav>
+      </aside>
+      <div id="barraIdentificacao">
+        <div id="logo"></div>
+        <div id="conteudoId"> Olá <b><span id="lblLogado"> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
+          <button type="button" id="btnSair"> Sair</button>
+        </div>
+      </div>
+
+
+<div id="conteudo"> 
 <h1> Menu Rápido </h1>
 
-<div class="img_menu">
-<a href="novoproduto"><figure id="item_new" class="item" ></figure></a>
-<p class="legenda"><a href="">Novo Produto</a></p>
+<div id="conteudo_item_menu">
+
+<div class="item">
+<div class="imagem">
+<a href="novoproduto"><figure id="item_new"  >
+    <img src="../imagens/icon-new.png" alt="Novo Produto">
+</figure></a>
 </div>
-
-
-
-<div class="img_menu" >
-<a href=""><figure id="item_entrada" class="item"></figure></a>
-<p class="legenda"><a href=""> Entrada de Produto</a></p> 
+<div class="legenda">
+<p ><a href="">Novo Produto</a></p>
 </div>
-
-<div class="img_menu" > 
-<a href=""><figure id="item_saida" class="item"></figure></a>
-<p class="legenda"> <a href=""> Saída de Produto</p> </a>
 
 </div>
 
 
+<div class="item">
+<div class="imagem" >
+<a href=""><figure id="entradaxml">
+    <img src="../imagens/icon-entrada.png" alt="Entrada XML">
+</figure></a>
+</div>
+<div class="legenda">
+<p ><a href=""> Entrada de Produto</a></p> 
+</div>
+</div>
 
-<div class="img_menu">
-<a href="novofornecedor"><figure id="item_fornecedor" class="item"></figure></a>
-<p class="legenda"><a href=""> Novo Fornecedor</a></p> 
+
+<div class="item">
+<div class="imagem" > 
+<a href=""><figure id="saida" >
+    <img src="../imagens/icon-saida.png" alt="Saída de Produto">
+</figure></a>
+</div>
+<div class="legenda">
+<p > <a href=""> Saída de Produto</p> </a>
+</div>
+</div>
+
+
+
+<div class="item">
+    <div class ="imagem"> 
+      <a href="novofornecedor"> <figure>
+            <img src='../imagens/icon-fornecedor.png' alt="Novo Fornecedor">
+        </figure> </a>
+    </div>
+    <div class="legenda">
+        <p class="legenda"><a href=""> Novo Fornecedor</a></p> 
+   </div>
  </div>
 
-<div class="img_menu">
-<a href=""><figure id="item_relatorio" class="item"></figure></a>
-<p class="legenda"> <a href="">Relatório </a></p> 
+<div class="item">
+    <div class="imagem">
+        <a href="">
+        <figure>
+                <img src='../imagens/icon-relatorio.png' alt="Relatório">
+        </figure></a>
+    </div>
+    <div class="legenda">
+       <p class="legenda"> <a href="">Relatório </a></p> 
+    </div>
 </div>
 
-</article>
-
-<footer>  </footer>
+</div>
+</div>
 
 
 
