--- a/server/views/saidaproduto.ejs
+++ b/server/views/saidaproduto.ejs
@@ -7,47 +7,69 @@
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
+      <link href="/stylesheets/menu.css" rel="stylesheet" type="text/css">
+
       <script  type="text/javascript" src="/javascripts/jquery-3.2.0.min.js"></script>
 
 
       <script  type="text/javascript" src="/javascripts/typeahead.min.js"></script>
    </head>
    <body>
-      <header>
-         <div name="logo" class="espacamento"></div>
-         <nav class="menu_principal">
-            <ul>
-               <li> <a href="#">Início</a></li>
-               <li>
-                  <a href="">Produtos</a>
-                  <ul>
-                     <li><a> Novo Produto </a> </li>
-                     <li><a> Entrada e Saída de Produto </a></li>
-                     <li><a > Editar Produto</a> </li>
-                     <li><a> Editar Produto </a></li>
-                  </ul>
-               </li>
-               <li> <a href="#">Estoque </a></li>
-               <li>
-                  <a href="#">Fornecedores </a>
-                  <ul>
-                     <li><a href="#"> Novo Fornecedor</a> </li>
-                     <li><a href="#"> Lista de Fornecedores</a> </li>
-                     <li><a href="#"> Pesquisar Fornecedor</a> </li>
-                     <li>
-                        <a href="editarfornecedor.html">
-                           Editar Fornecedor
-                     </li>
-                  </ul>
-               </li>
-               <li> <a href="#">Relatórios </a></li>
-               <li> <a href="#">Lucro </a></li>
-               <li> <a href="#">Sair </a></li>
-            </ul>
-         </nav>
-         <div class="clear"></div>
-      </header>
-      <article>
+    <aside>
+        <nav class="menu_principal">
+          <ul>
+            <li><a href="home"> <i class="fas fa-home"></i> Início</a></li>
+            <li> <a href=""> <i class="fas fa-tag"></i> Produtos</a>
+              <ul>
+                <li><a href="novoproduto"> Novo Produto </li>
+                <li><a href="entradasaida"> Adicionar nota XML </li>
+                <li><a href="entradasaida"> Saída de Produto </li>
+                <li><a href="editarproduto"> Editar Produto </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="fas fa-truck"></i> Fornecedores </a>
+              <ul>
+                <li><a href="novofornecedor"> Novo Fornecedor</a> </li>
+                <li><a href="#"> Editar Fornecedor</a> </li>
+                <li><a href="#"> Pesquisar Fornecedor</a> </li>
+                <li><a href="#"> Lista de Fornecedores </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="far fa-clipboard"></i> Estoque </a>
+              <ul>
+                <li><a href=""> Produtos sem estoque </a> </li>
+                <li><a href="#"> Mais Vendidos </a> </li>
+                <li><a href="#"> Menos Vendidos </a> </li>
+                <li><a href="#"> Produtos Comprados </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"> <i class="fas fa-dollar-sign"></i>Lucro </a>
+              <ul>
+                <li><a href="#"> Por mês </a> </li>
+                <li><a href="#"> Por Semana </a> </li>
+                <li><a href="#"> Por Ano </a> </li>
+              </ul>
+            </li>
+            <li> <a href="#"><i class="fas fa-wallet"></i> Despesas </a>
+              <ul>
+                <li><a href="#"> Loja</a> </li>
+                <li><a href="#"> Pessoais </a> </li>
+              </ul>
+            </li>
+            <li>
+              <button type="button" id="btnSair"> Sair</button>
+              <i class="fas fa-times"></i> </li>
+          </ul>
+        </nav>
+      </aside>
+      <div id="barraIdentificacao">
+        <div id="logo"></div>
+        <div id="conteudoId"> Olá <b><span id="lblLogado"> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
+          <button type="button" id="btnSair"> Sair</button>
+        </div>
+      </div>
+
+      <div id="conteudo">
           <h2> Saída Produto</h2>
 
         <div id="custom-templates">
@@ -93,7 +115,7 @@
 
                         </div>
           
-          </article>
+                    </div>
           </body>
          
           </html>
@@ -128,12 +150,12 @@
                     var valor = document.getElementById('vl_unitario');
                     var lbl_contador = document.getElementById('contador');
                     
-     
-                    
                     codigo.value=datum.cd_produto;
                     descricao.value=datum.ds_produto;
                     valor.value =datum.vl_unitario;
                     lbl_contador.textContent=datum.qt_produto;
+
+
 
                 });   
 
