--- a/server/views/relatorios.ejs
+++ b/server/views/relatorios.ejs
@@ -67,92 +67,17 @@
         </div>
       </div>
 
+      <div id="conteudo">
+      <h1>Relatórios</h1>
+    Produtos Mais Vendidos
+    Produtos Menos Vendidos
+    Produtos com Estoque Minimo
+    Produtos com Estoque Máximo
+    Consumo de Produto
+    Gastos Pessoais
+    Gastos da Loja
+    Todos fornecedores
 
-<div id="conteudo"> 
-<h1> Menu Rápido </h1>
+   
 
-<div id="conteudo_item_menu">
-
-<div class="item">
-<div class="imagem">
-<a href="novoproduto"><figure id="item_new"  >
-    <img src="../imagens/icon-new.png" alt="Novo Produto">
-</figure></a>
-</div>
-<div class="legenda">
-<p ><a href="">Novo Produto</a></p>
-</div>
-
-</div>
-
-
-<div class="item">
-<div class="imagem" >
-<a href=""><figure id="entradaxml">
-    <img src="../imagens/icon-entrada.png" alt="Entrada XML">
-</figure></a>
-</div>
-<div class="legenda">
-<p ><a href=""> Entrada de Produto</a></p> 
-</div>
-</div>
-
-
-<div class="item">
-<div class="imagem" > 
-<a href=""><figure id="saida" >
-    <img src="../imagens/icon-saida.png" alt="Saída de Produto">
-</figure></a>
-</div>
-<div class="legenda">
-<p > <a href=""> Saída de Produto</p> </a>
-</div>
-</div>
-
-
-
-<div class="item">
-    <div class ="imagem"> 
-      <a href="novofornecedor"> <figure>
-            <img src='../imagens/icon-fornecedor.png' alt="Novo Fornecedor">
-        </figure> </a>
-    </div>
-    <div class="legenda">
-        <p class="legenda"><a href=""> Novo Fornecedor</a></p> 
-   </div>
- </div>
-
-<div class="item">
-    <div class="imagem">
-        <a href="">
-        <figure>
-                <img src='../imagens/icon-relatorio.png' alt="Relatório">
-        </figure></a>
-    </div>
-    <div class="legenda">
-       <p class="legenda"> <a href="">Relatório </a></p> 
-    </div>
-</div>
-
-</div>
-</div>
-
-
-
-</body>
-<script>
-
-    $(document).ready(function(){
-
-        $('#btnSair').click(function(){
-            window.location.href = '/sair';
-        });
-
-    });
-
-</script>
-
-</html>
-
-
-
+      </div>
