--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,50 +1,145 @@
 @charset "utf-8";
 /* CSS Document */
 
-
-
-aside {
+#barraMenu {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 160px;
-	font-size: 14px;
-	height: 100%;
-	background-color:  #7c418b/* rgb(90, 47, 101) OU #11143B*/;
 	z-index: 1;
+	background-color: #000;
+	height: 100%;
+    font-size:13px
+}
+#conteudoBarraMenu {
+	padding: 10px;
 	padding-top: 57px;
-	box-sizing:content-box;
-	padding-left:10px;
-}
-.menu_principal ul li {
-	padding: 0.5em;
-}
-.menu_principal li:hover {
 	color: #fff;
-	text-decoration: underline;
 }
-.menu_principal ul ul {
-	display: none;
+#conteudoBarraMenu ul {
+	margin: 0;
+	padding: 0;
+    width:100%;
+	list-style-type: none;
+}
+#conteudoBarraMenu ul li a {
+	padding: 10.5px 11px;
+	display: block;
+	border-radius: 5px;
+}
+.submenu {
+	background-color: #363635;
+	border-radius: 4px;
+	padding: 20px;
+}
+.subitem {
+	font-size: 11px;
+	margin-left: 20px;
+}
+a.lnkSubItem {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkSubItem:hover {
+	text-decoration: underline;
+	color: #fff;
+}
+a.lnkSubItem:visited {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkSubItem>active {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBranco {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBranco:hover {
+	text-decoration: none;
+	color: #fff;
+	background-color: #C82C64;
+}
+a.lnkBranco:visited {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBranco:active {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBrancoSimples {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBrancoSimples:hover {
+	text-decoration: underline;
+	color: #fff;
+}
+a.lnkBrancoSimples:visited {
+	text-decoration: none;
+	color: #fff;
+}
+a.lnkBrancoSimples:active {
+	text-decoration: none;
+	color: #fff;
+}
+.titulo {
+	color: #137ed0;
+	font-weight: bold;
+	font-size: 18px;
+	text-transform: uppercase;
+}
+a.lnkGeral {
+	text-decoration: none;
+	color: #2c286c;
+}
+a.lnkGeral:hover {
+	text-decoration: none;
+	color: #2c286c;
+}
+a.lnkGeral:visited {
+	text-decoration: none;
+	color: #2c286c;
+}
+a.lnkGeral:active {
+	text-decoration: none;
+	color: #2c286c;
+}
+#barraSubMenu {
+	background-color: #000;
+	min-height: 56px;
+}
+#conteudoBarraSubMenu {
+	padding: 10px;
+	color: #fff;
+	float: left;
+}
+#conteudoBarraSubMenu ul {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	list-style-type: none;
+}
+#conteudoBarraSubMenu ul li {
+	float: left;
+	padding-right: 10px;
+}
+#conteudoBarraSubMenu ul li a {
+	text-decoration: none;
+	padding: 10.5px 11px;
+	display: block;
+	border-radius: 5px;
 }
 
-.menu_principal ul li:hover > ul {
-	/* aqui transição abrindo*/
-	display: block;
-	
-}
-.menu_principal ul li a:hover {
-	/*background-color: #FD5286;*/
-	transition: 2s;
-	text-decoration: none;
-	color: white;
-}
 #barraIdentificacao {
-	font-size: 14px;
+	font-size: 13px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	background-color:#7c418b;
+	background-color:#000;
 	color: #fff;
 	z-index: 2;
 	min-height: 57px;
@@ -57,3 +152,4 @@ aside {
 
 .fas:hover{color: #C82C64; background-color:white}
 #btnSair{background-color:#7c418b; border:none; color:white; font-size:14px; cursor:pointer;}
+#btnSair:hover{background:  #C82C64;}
