--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -7,6 +7,8 @@
 <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+<script  type="text/javascript" src="/javascripts/jquery-3.2.0.min.js"></script>
+<script  type="text/javascript" src="/javascripts/typeahead.min.js"></script>
 
 
 <title>Bazar Olimpio | Home</title>
